# java-simple-interface

./: README.md  pyproject.toml
java_simple_interface/: __init__.py  java_version.py  run_java.py
